@@ -30,7 +30,6 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.gridsuite.directory.server.DirectoryException.Type.*;
@@ -275,7 +274,7 @@ public class DirectoryService {
             return List.of();
         }
 
-        return getAllDirectoryElementsStream(directoryUuid, types, userId).collect(Collectors.toList());
+        return getAllDirectoryElementsStream(directoryUuid, types, userId).toList();
     }
 
     private Stream<ElementAttributes> getOnlyElementsStream(UUID directoryUuid, String userId, List<String> types) {
@@ -337,8 +336,8 @@ public class DirectoryService {
     @Transactional
     public void updateElementLastModifiedAttributes(UUID elementUuid, LocalDateTime lastModificationDate, String lastModifiedBy) {
         DirectoryElementEntity elementToUpdate = getDirectoryElementEntity(elementUuid);
-        elementToUpdate.setLastModificationDate(lastModificationDate);
-        elementToUpdate.setLastModifiedBy(lastModifiedBy);
+        elementToUpdate.updateModificationAttributes(lastModifiedBy, lastModificationDate);
+
     }
 
     public void moveElementsDirectory(List<UUID> elementsUuids, UUID newDirectoryUuid, String userId) {
@@ -536,11 +535,11 @@ public class DirectoryService {
             throw new DirectoryException(NOT_FOUND);
         }
 
-        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).collect(Collectors.toList()), types);
+        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).toList(), types);
 
         return elementEntities.stream()
                 .map(attribute -> toElementAttributes(attribute, subElementsCount.getOrDefault(attribute.getId(), 0L)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void notify(@NonNull String notificationName, @NonNull UUID elementUuid, @NonNull String userId) {
